--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <body>
-<select id="mainselect" onclick="displayProblem()">
+<select id="mainselect" onchange="displayProblem()">
 <option value="val">VALUE</option>
 </select>
 <!--<p id="description"></p>-->
-<p id="solution" style="font-size:3em"></p>
+<p id="solution" style="font-size:1.5em"></p>
 <!--<textarea name="mysolution" cols="100" rows="100"></textarea>-->
 <script>
 var questions=[
